PEL-1775: fix alert color in dark mode

--- a/portail_citoyen/assets/styles/components/_alert.sass
+++ b/portail_citoyen/assets/styles/components/_alert.sass
@@ -7,3 +7,11 @@
 
         &:last-child
             margin-bottom: 0
+
+    [data-fr-theme=dark] .fr-background-action-high--blue-france &
+        box-shadow: inset 0 0 0 1px var(--text-inverted-blue-france), inset 2.5rem 0 0 0 var(--text-inverted-blue-france)
+
+        &::before
+            background-color: var(--blue-france-sun-113-625)
+            color: var(--text-inverted-blue-france)
+
